MJ 29/10/2004
- new constructor parameter for OverlayGraph so that setEdge could work in
  an undirected manner (sets opposite edge too). OverlayGraph is interpreted as
  directed, nontheless, because setEdge is not the only way to set edges.
- wireRegularRandom has new config parameter "undirected", which uses the
  feature above 
- new toString to IdleProtocol, 

MJ 25/10/2004
- added method lookupPid to Configuration to make it possible to search
  for a protocol id based on the protocol name

MJ 22/10/2004
- added the possibility of excluding entities that are present in the config
  using a simple config parameter: eg "include observer aa bb 23". This
  works exactly like the order feature only those names that are not listed
  are excluded. [see classdoc of Configuration]
- some more minor refactoring of Simulator and OrderSimulator

MJ 21/10/2004
- some refactoring of the most recent changes for simplification and
  clarification and which include
  - moving order-handling into Configuration and so removing it from the
    rest of the code: now ordering is transparent to Simulator.
  - removing setPid from Configuration and funtionality to assign ID-s to
    protocols names is also moved into Configuration completely. The rest of
    the code now can use simply getPid after loading the config to get
    protocol id.
  - separating alternative style of configuration to the new OrderSimulator
    that now extends the basic Simulator class. to use the config property
    "order" you need to launch OrderSimultor. All other features and orderings
    like "order.protocol" are understood by Simulator too.
- enhancement of documentation by adding stuff written by Alberto to the class
  docs of OrderSimulator and Configuration.

AM 17/10/2004
- RangeSimulator: now it works by calling Simulator, so we don't
  need to maintain two simulators. Using RangeSimulator
  you can write stuff like this:
  range.0 MAG;10:18